--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul>
-    <li>sdvsdvsdvsdv</li>
-    <li>dvdsvsvsdvvvsvd</li>
-</ul>
 
 </body>
 </html>
