--- a/index.html
+++ b/index.html
@@ -6,49 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Converter</title>
     <link rel="stylesheet" href="css/style-blocks.css" />
-    <link rel="stylesheet" href="css/style-bottums.css" />
     <script defer src="js/script.js"></script>
   </head>
   <body>
     <main class="general-block">
-      <h1 class="name-of-title">см скільки мм</h1>
+      <h1 class="name-of-title">Конвертер величин</h1>
       <form class="into-block">
-        <div class="in-block input-num-size float1">
-          <!-- поле для вводу числа -->
-          <label
-            >Введіть число <input type="number" name="cm" class="enter-num"
-          /></label>
-        </div>
+        <div class="nav-enter-size">
+          <div class="in-block input-num-size float1">
+            <!-- поле для вводу числа -->
+            <label>
+              Введіть число
+              <input type="number" name="cm" class="enter-num"
+            /></label>
+          </div>
 
-        <div class="in-block input-size float1">
-          <!-- Поле де можна вибрати велечину з якої переводиш -->
-          <select class="select-size">
-            <option value="METER">Метри</option>
-            <option value="MILE">Милі</option>
-            <option value="KILOMETER">Кілометри</option>
-            <option value="CENTIMETER">Сантиметри</option>
-            <option value="MILIMETER">Міліметри</option>
-          </select>
-        </div>
+          <div class="in-block input-size input1">
+            <!-- Поле де можна вибрати велечину з якої переводиш -->
+            <select class="select-size">
+              <option value="METER">Метри</option>
+              <option value="MILE">Милі</option>
+              <option value="KILOMETER">Кілометри</option>
+              <option value="CENTIMETER">Сантиметри</option>
+              <option value="MILIMETER">Міліметри</option>
+            </select>
+          </div>
 
-        <div class="arrow in-block-arr">
-          <!-- Стрілка (простий знак) -->
-          <img src="/image/arrow.png" width="50px" height="50px" alt="lorem" />
-        </div>
+          <div class="in-block-arr in-block">
+            <!-- Стрілка (простий знак) -->
+            <img
+              src="/image/arrow.png"
+              width="50px"
+              height="50px"
+              alt="lorem"
+            />
+          </div>
 
-        <div class="in-block input-size float2">
-          <!-- Поле в якому можна вибрати величину яку хочеш отримати -->
-          <select class="select-size">
-            <option value="METER">Метри</option>
-            <option value="MILE">Милі</option>
-            <option value="KILOMETER">Кілометри</option>
-            <option value="CENTIMETER">Сантиметри</option>
-            <option value="MILIMETER">Міліметри</option>
-          </select>
-        </div>
-        <div class="in-block input-num-size float2">
-          <!-- Кнопка яка вираховує -->
-          <button type="submit">Вирахувати</button>
+          <div class="in-block input-size input2">
+            <!-- Поле в якому можна вибрати величину яку хочеш отримати -->
+            <select class="select-size">
+              <option value="METER">Метри</option>
+              <option value="MILE">Милі</option>
+              <option value="KILOMETER">Кілометри</option>
+              <option value="CENTIMETER">Сантиметри</option>
+              <option value="MILIMETER">Міліметри</option>
+            </select>
+          </div>
+          <div class="button-upload">
+            <!-- Кнопка яка вираховує -->
+            <button type="submit">Вирахувати</button>
+          </div>
         </div>
         <div class="nav-copy-result">
           <div class="end-result">
