refactor(index.html, style-blocks.css) change formatting

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="input-size">
           <!-- поле для вводу числа -->
           <label>
-            <span>Введіть число</span>
+            <span class="text-input">Введіть число</span>
             <input type="number" name="cm" class="enter-num" />
           </label>
 
@@ -45,12 +45,12 @@
         </div>
         <div class="btns">
           <!-- Кнопка яка вираховує -->
-          <button type="submit">Вирахувати</button>
-          <button type="button">Скопіювати результат</button>
+          <button class="btn-calc" type="submit">Вирахувати</button>
+          <button class="btn-copy" type="button">Скопіювати результат</button>
         </div>
         <div class="copy-close-result">
           <output name="result" class="out-result"></output>
-          <img src="/image/close image.jpg" alt="Close" width="40px" />
+          <img src="/image/close_image.jpg" alt="Close" width="40px" />
         </div>
       </form>
     </main>
